Fixed field type settings, strings to int/float.

--- a/elk-server/etc/logstash/conf.d/10-filters.conf
+++ b/elk-server/etc/logstash/conf.d/10-filters.conf
@@ -14,14 +14,14 @@ filter {
     grok {
       add_tag => ["swift", "proxy"]
       patterns_dir => ["/opt/logstash/patterns", "/opt/logstash/extra_patterns"]
-      match => { "message" => "%{TIMESTAMP_ISO8601:node_tz} %{HOSTNAME:hostname} %{NOTSPACE:swift_service}\: %{NOTSPACE:client_ip} %{NOTSPACE:remote_addr} %{SWIFT_PROXY_DATETIME:datetime} %{WORD:request_method} %{URIPATHPARAM:request_path} HTTP/%{NUMBER:httpversion} %{NUMBER:status_int} %{NOTSPACE:referer} %{NOTSPACE:user_agent} %{NOTSPACE:auth_token} %{NOTSPACE:bytes_recvd,int} %{NOTSPACE:bytes_sent,int} %{NOTSPACE:client_etag} %{NOTSPACE:transaction_id} %{NOTSPACE:headers} %{NUMBER:request_time,float} %{NOTSPACE:source} %{NOTSPACE:log_info} %{NUMBER:request_start_time,float} %{NUMBER:request_end_time,float} %{NOTSPACE:policy_index,int}" }
+      match => { "message" => "%{TIMESTAMP_ISO8601:node_tz} %{HOSTNAME:hostname} %{NOTSPACE:swift_service}\: %{NOTSPACE:client_ip} %{NOTSPACE:remote_addr} %{SWIFT_PROXY_DATETIME:datetime} %{WORD:request_method} %{URIPATHPARAM:request_path} HTTP/%{NUMBER:httpversion} %{NUMBER:status_int:int} %{NOTSPACE:referer} %{NOTSPACE:user_agent} %{NOTSPACE:auth_token} %{NOTSPACE:bytes_recvd:int} %{NOTSPACE:bytes_sent:int} %{NOTSPACE:client_etag} %{NOTSPACE:transaction_id} %{NOTSPACE:headers} %{NUMBER:request_time:float} %{NOTSPACE:source} %{NOTSPACE:log_info} %{NUMBER:request_start_time} %{NUMBER:request_end_time} %{NOTSPACE:policy_index:int}" }
     }
   }
   if [type] == "swift" {
     grok {
       add_tag => ["swift", "storage"]
       patterns_dir => ["/opt/logstash/patterns", "/opt/logstash/extra_patterns"]
-      match => { "message" => "%{MONTH:month} %{MONTHDAY:date} %{TIME:time} %{HOSTNAME:hostname} %{NOTSPACE:swift_service}\: %{IPV4:remote_addr} %{NOTSPACE:dash1} %{NOTSPACE:dash2} \[%{SWIFT_STORAGE_DATETIME:datetime} %{ISO8601_TIMEZONE}\] \"%{WORD:request_method} %{URIPATHPARAM:request_path}\" %{NUMBER:status_int} %{NOTSPACE:content_length,int} \"%{NOTSPACE:referer}\" \"%{NOTSPACE:transaction_id}\" %{QUOTEDSTRING:user_agent} %{NUMBER:request_time,float} \"%{NOTSPACE:additional_info}\" %{NUMBER:server_pid,int} %{NOTSPACE:policy_index,int}" }
+      match => { "message" => "%{MONTH:month} %{MONTHDAY:date} %{TIME:time} %{HOSTNAME:hostname} %{NOTSPACE:swift_service}\: %{IPV4:remote_addr} %{NOTSPACE:dash1} %{NOTSPACE:dash2} \[%{SWIFT_STORAGE_DATETIME:datetime} %{ISO8601_TIMEZONE}\] \"%{WORD:request_method} %{URIPATHPARAM:request_path}\" %{NUMBER:status_int:int} %{NOTSPACE:content_length:int} \"%{NOTSPACE:referer}\" \"%{NOTSPACE:transaction_id}\" %{QUOTEDSTRING:user_agent} %{NUMBER:request_time:float} \"%{NOTSPACE:additional_info}\" %{NUMBER:server_pid:int} %{NOTSPACE:policy_index:int}" }
       remove_field => ["dash1", "dash2"]
     }
   }
